--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/a95a31e10a.js" crossorigin="anonymous"></script>
-    <title>🆆🅴🅳🅳🅸🅽🅶 🅳🆁🅴🆂🆂</title>
+    <title>wєddíng drєss</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
